# MO-lab1

./: Makefile  config.py  custom_types.py  functions.py  lrs.py  main.py  optimizers.py  plots.py  pyproject.toml  q2.py  readme.md  report.md  util.py
